<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avoscloud.chat.myspace.MySpaceActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <include layout="@layout/toolbar_base_layout"/>
    <RelativeLayout
        android:id="@+id/btn_avatar"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/lable_avatar"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/my_setting_lable_avatar"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/img_user_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/avatar_default"
            android:adjustViewBounds="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <RelativeLayout
        android:id="@+id/btn_username"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/lable_nickname"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/my_setting_lable_nickname"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/app_name"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <RelativeLayout
        android:id="@+id/btn_mark"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/my_setting_lable_im_mark"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/my_setting_lable_im_mark"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/im_mark"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/app_name"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <RelativeLayout
        android:id="@+id/btn_card"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/my_setting_lable_card"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/my_setting_lable_card"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/card"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <RelativeLayout
        android:id="@+id/btn_sex"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/my_setting_lable_sex"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/my_setting_lable_sex"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/sex_male"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <RelativeLayout
        android:id="@+id/btn_area"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/my_setting_lable_area"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/my_setting_lable_area"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/area"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/zh_cn"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <RelativeLayout
        android:id="@+id/btn_signature"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/my_setting_lable_signature"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/my_setting_lable_signature"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/signature"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/tip1"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />



</LinearLayout>
